--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,10 +1,10 @@
 name: 'gcr.io/cloud-builders/gcloud'
 args: ['builds', 'submit', '--tag', 'gcr.io/testequalidade-422900
-/my-app', '.']
+/AWS-Java-Test', '.']
 name: 'gcr.io/cloud-builders/docker'
 args: ['push', 'gcr.io/testequalidade-422900
-/my-app']
+/AWS-Java-Test']
 timeout: '1600s'
 images:
 - 'gcr.io/testequalidade-422900
-/my-app'
+/AWS-Java-Test'
